style the scrollbar and fix bugs of scrollbar not works in terms and privacy pages

--- a/app/src/Styles/App.scss
+++ b/app/src/Styles/App.scss
@@ -100,3 +100,27 @@ body::selection {
   font-display: swap;
   font-style: normal;
 }
+
+//handle scroll bar style
+/* Entire scrollbar width */
+::-webkit-scrollbar {
+  width: 12px; /* vertical scrollbar width */
+  height: 12px; /* horizontal scrollbar height */
+}
+
+/* Scrollbar track (background) */
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+/* Scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background-color: $main_color; /* your color */
+  border-radius: 10px;
+}
+
+/* Scrollbar on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4c9316;
+}
