--- a/app/src/Styles/Privacy.scss
+++ b/app/src/Styles/Privacy.scss
@@ -52,6 +52,7 @@ body {
   padding: 80px 20px;
 
   h1 {
+    color: white;
     font-size: 48px;
     text-align: center;
     font-weight: 700;
@@ -61,6 +62,7 @@ body {
   }
 
   h4 {
+    color: white;
     font-size: 16px;
     text-align: center;
     font-weight: 400;
