--- a/app/src/Styles/Terms.scss
+++ b/app/src/Styles/Terms.scss
@@ -1,7 +1,4 @@
-$main_color: #8cff2e;
-$text_color: #8e8e8e;
-$second_color: #0d0d0d;
-$background: #050505;
+@import '../Styles/App.scss';
 html,
 body {
   margin: 0;
@@ -52,6 +49,7 @@ body {
   padding: 80px 20px;
 
   h1 {
+    color: white;
     font-size: 48px;
     text-align: center;
     font-weight: 700;
